--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fp-recursion",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Recursion implemented for functional programming for replacement of loop",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/frozenarc/fp-recursion.git"
   },
   "keywords": [
-    "resursion",
+    "recursion",
     "loop",
     "functional",
     "programming",
