--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "functional",
     "programming",
     "fp",
-    "recur"
+    "recur",
+    "recursive",
+    "recurring"
   ],
   "author": "Manan Panchal <mananvpanchal@gmail.com>",
   "license": "BSD 3-Clause",
